Update messier_new2 (4) (1).ipynb

--- a/messier_new2 (4) (1).ipynb
+++ b/messier_new2 (4) (1).ipynb
@@ -117,7 +117,7 @@
     "    fig = plt.figure(figsize = (14, 12))\n",
     "    ax = fig.add_subplot(111, projection = \"mollweide\")\n",
     "    ax.text(raM.radian + 0.08, decM.radian + 0.08, 'M' + str(c+1), fontsize=12, color='blue', ha='left', va='bottom', alpha=0.8)\n",
-    "    ax.set_title('Position of M' + str(c+1) + ' in Molleweide view', fontsize = 20, pad = 20)\n",
+    "    ax.set_title('Position of M' + str(c+1) + ' in Mollweide view', fontsize = 20, pad = 20)\n",
     "    ax.scatter(raM.radian, decM.radian, s = 200)"
    ]
   },
